--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
       </video>
 </div>
 
-<div class="content container-fluid ">
+<div class=" container-fluid  footer">
 <div class="row ">
     <div class="col-md-6 ">
         <div class="p-3">
             <h1>Ahmed Faarih</h1>
-            <p>Hello, Faarih Here! <br>I am a part time Web Developer, </p>
+            <p>Hello, Faarih Here! <br>I am a part time Web Developer. Mostly into Front-end Web Development. </p>
            
         </div>
     </div>
     <div class="col-md-3   ">
         <div class="menu d-flex justify-content-center">
             <a href=""><h5>Home</h3></a>
-            <a href=""><h5>About</h3></a>
-            <a href=""><h5>Project</h3></a>
+            <a href="me.html"><h5>About</h3></a>
+            <a href=""><h5>Projects</h3></a>
         </div>
         <div class="  d-flex justify-content-center">
              <a href="https://github.com/faarih01" target="_blank"> <i id="icon" class="fab fa-github fa-1x"></i> </a>
