--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </div>
     <div class="col-md-3   ">
         <div class="menu d-flex justify-content-center">
-            <a href=""><h5>Home</h3></a>
-            <a href="me.html"><h5>About</h3></a>
+            <a href="/"><h5>Home</h3></a>
+            <a href="/me"><h5>About</h3></a>
             <a href=""><h5>Projects</h3></a>
         </div>
         <div class="  d-flex justify-content-center">
