Connected using GITHUB API

--- a/works.html
+++ b/works.html
@@ -65,7 +65,11 @@
 <title>Ahmed Faarih : Web Developer</title>
 <div class="mainContent">
     <div class="container-fluid">
-        <div id="pin"></div>
+        <div class="row">
+         
+            <div id="pin"></div>
+          
+        </div>
   </div>
 </div>
 
