--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="menu d-flex justify-content-center">
             <a href="/"><h5>Home</h3></a>
             <a href="/me"><h5>About</h3></a>
-            <a href=""><h5>Projects</h3></a>
+            <a href="/works"><h5>Projects</h3></a>
         </div>
         <div class="  d-flex justify-content-center">
              <a href="https://github.com/faarih01" target="_blank"> <i id="icon" class="fab fa-github fa-1x"></i> </a>
